RESOLVED FIXED55967
NPAPI - jvalue conversion should not be in JavaInstance
https://bugs.webkit.org/show_bug.cgi?id=55967
Summary NPAPI - jvalue conversion should not be in JavaInstance
Steve Block
Reported 2011-03-08 14:20:29 PST
The logic to convert between NPAPI and jvalue values does not belong in JavaInstance, as this class logically represents a Java object and should not know about NPAPI types. Instead, this logic should be moved out of JavaInstance (and into JavaNPObject in the case of V8). This will also allow all implementors of the new JavaInstance interface to share this logic. See Bug 55383.
Attachments
Patch (5.97 KB, patch)
2011-03-09 03:47 PST, Steve Block
jorlow: review+
Steve Block
Comment 1 2011-03-09 03:47:06 PST
Jeremy Orlow
Comment 2 2011-03-09 09:59:50 PST
Comment on attachment 85153 [details] Patch r=me
Andrei Popescu
Comment 3 2011-03-09 10:05:50 PST
LGTM
Steve Block
Comment 4 2011-03-09 10:17:53 PST
Note You need to log in before you can comment on or make changes to this bug.