2011-03-09  Steve Block  <steveblock@google.com>

Reviewed by Jeremy Orlow.

        NPAPI - jvalue conversion should not be in JavaInstance
        https://bugs.webkit.org/show_bug.cgi?id=55967

        No new tests, refactoring only.

        * bridge/jni/v8/JavaInstanceV8.cpp:
        (JavaInstance::invokeMethod):
        * bridge/jni/v8/JavaInstanceV8.h:
        * bridge/jni/v8/JavaNPObjectV8.cpp:
        (JSC::Bindings::JavaNPObjectInvoke):

Canonical link: https://commits.webkit.org/70538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80647 268f45cc-cd09-0410-ab3c-d52691b4dbfc